# Cybersecurity-Mode

./: .gitattributes  Cargo.toml  README.md  build.hl  build.rs  install.hl  remove.hl
cm-bg/: Cargo.toml
cm-bg/src/: main.rs
compositor/: Cargo.toml
compositor/src/: backend.rs  handlers.rs  input.rs  ipc_bridge.rs  main.rs  render.rs  state.rs  xwayland.rs
compositor/src/protocols/: foreign_toplevel.rs  layer_shell.rs  mod.rs  screencopy.rs
desktop/: cm-environment-session.desktop  cm-mode.desktop  cm-please.desktop  cybersec-mode-session.desktop  cybersec-mode.desktop  switch-to-cybersec-mode.desktop
docs/: default-cm.hk  theme-cybersec-dark.hk
source-code/: main.rs
source-code/backend/: Cargo.toml
source-code/backend/rpc/: mod.rs
source-code/backend/src/: main.rs
source-code/backend/src/container/: mod.rs
source-code/cli/: shard.yml
source-code/cli/src/: main.cr
source-code/main/: main.py
source-code/main/core/: config.py  ipc.py  logger.py
source-code/main/ui/: docs_panel.py  first_run_wizard.py  hacker_menu.py  main_panel.py  mode_dialog.py  network_widget.py  settings_panel.py  sidebar.py  terminal_panel.py  theme.py  titlebar.py
source-code/please/: mod.rs
source-code/theme/: mod.rs
source-code/tools/: mod.rs
ui/: cm.slint
ui/environment/: about.slint  lockscreen.slint  main.slint  settings.slint
ui/mode/: main.slint
ui/please/: main.slint
