[package]
name = "cm-compositor"
version = "0.2.0"
edition = "2021"
description = "CM Wayland compositor — Smithay 0.7 based"
license = "BSD-3-Clause"

[[bin]]
name = "cm-compositor"
path = "src/main.rs"

[dependencies]
smithay = { version = "0.7", features = [
    "wayland_frontend",
    "xwayland",
    "renderer_gl",
    "backend_libinput",
    "backend_udev",
    "backend_drm",
    "backend_egl",
    "backend_winit",
    "backend_session_libseat",
    "desktop",
] }
wayland-server        = "0.31"
wayland-protocols     = { version = "0.32", features = ["server", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }

anyhow    = "1"
thiserror = "2"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which     = "6"
nix       = { version = "0.27", features = ["process", "signal"] }
tokio      = { version = "1", features = ["full"] }
serde_json = "1"
serde      = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
